--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200009, CPAN::Meta::Converter version 2.110930001'
+generated_by: 'Dist::Zilla version 4.200012, CPAN::Meta::Converter version 2.110930001'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,6 +17,6 @@ requires:
   Acme::CPANAuthors: 0
   perl: v5.6.0
 resources:
-  homepage: http://github.com/bingos/acme-cpanauthors-duallife
-  repository: http://github.com/bingos/acme-cpanauthors-duallife
-version: 0.06
+  homepage: https://github.com/bingos/acme-cpanauthors-duallife
+  repository: https://github.com/bingos/acme-cpanauthors-duallife
+version: 0.08
