--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200012, CPAN::Meta::Converter version 2.110930001'
+generated_by: 'Dist::Zilla version 4.300000, CPAN::Meta::Converter version 2.112150'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,5 +18,5 @@ requires:
   perl: v5.6.0
 resources:
   homepage: https://github.com/bingos/acme-cpanauthors-duallife
-  repository: https://github.com/bingos/acme-cpanauthors-duallife
-version: 0.08
+  repository: https://github.com/bingos/acme-cpanauthors-duallife.git
+version: 0.10
