--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,14 @@ abstract: 'We are CPAN Authors of Dual Life core modules'
 author:
   - 'Chris Williams'
 build_requires:
+  File::Spec: 0
+  IO::Handle: 0
+  IPC::Open3: 0
   Test::More: 0.47
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560'
+generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132661'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,4 +22,4 @@ requires:
 resources:
   homepage: https://github.com/bingos/acme-cpanauthors-duallife
   repository: https://github.com/bingos/acme-cpanauthors-duallife.git
-version: 0.28
+version: 0.30
